--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 
 language: python
 
+cache: pip
+
 python:
   - "2.6"
   - "2.7"
@@ -14,4 +16,4 @@ install:
 
 # Command to run tests
 script:
-  - python setup.py test
+  - python setup.py nosetests
