--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,14 @@
 
 language: python
 
-cache: pip
-
 python:
-  - "2.6"
   - "2.7"
-  - "3.2"
-  - "3.3"
-  - "3.4"
+
+cache: pip
 
 # Command to install HappyML and dependencies.
 install:
-  - sudo python setup.py install
+  - python setup.py install
 
 # Command to run tests
 script:
